--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -2,9 +2,8 @@
 
 #app {
   max-width: 1280px;
-  margin: 0 auto;
+  /* margin: 0 auto; */
   padding: 1rem;
-
   font-weight: normal;
 }
 
@@ -24,7 +23,6 @@ a,
 @media (min-width: 1024px) {
   body {
     display: flex;
-    place-items: center;
   }
 
   #app {
